terminando seccion de testimoniales, iniciando restaurantes favoritos

--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -19,6 +19,12 @@
     }
 }
 
+@mixin bigDesktop {
+    @media (min-width: v.$bigDesktop) {
+        @content;
+    }
+}
+
 
 @mixin boton($color, $texto) {
     background-color: $color;
