--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,6 +5,7 @@ $fuente_principal: 'Roboto', sans-serif;
 $telefono: 480px;
 $tablet: 768px;
 $desktop: 1024px;
+$bigDesktop: 2580px;
 
 // Colores
 $primario: #e8505b;
